--- a/web/themes/custom/s3waas/css/colors.css
+++ b/web/themes/custom/s3waas/css/colors.css
@@ -321,7 +321,8 @@ ul.tabs.primary {
 
 ul.menu a.is-active {
   color: #fff;
-  background: #3c7d14;;
+  background: #3c7d14;
+  ;
 }
 
 
